# PennCloud

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  setup.sh
backend/: .cproject  .project  build.sh  coordinator.cc  hosts.txt  key_val_store.cc  kvs_client.h  kvs_server.h  kvstore.proto  kvstore_client.cc  kvstore_client.h  master.proto  worker.cc
backend/web_pages/: webpage.html
frontend/: Makefile  http_server  http_server.cc  load_balancer.cc
frontend/admin/: admin_service.cc  admin_service.h
frontend/admin/test/: launchAllServers.py  shutdownAllServers.py
frontend/email/: client_pool.h  email_service.cc  email_service.h  email_service_test.py  integration_test.py  smtp_server  smtp_server.cc  smtp_test_script.py
frontend/email/test/email_service_test/: test_full_email_flow.py  test_inbox_functionality.py
frontend/email/test/smtp_test/: test_external_delivery.py  test_headers.py  test_internal_delivery.py  test_smtp_commands.py  test_smtp_lifecycle.py  test_smtp_sequence.py
frontend/storage/: storage_service.cc  storage_service.h
frontend/test/: Makefile  common.cc  http_server_test  http_server_test.cc
frontend/user_account/: user_account_service.cc  user_account_service.h
frontend/web_pages/: change_password.html  index.html  login.html  signup.html  styling.css
grpc/: install.sh  install2.sh
utils/: logger.cc  logger.h  serializer.cc  serializer.h  utils.cc  utils.h
web_storage_service/: .project
web_storage_service/WEB STORAGE SERVICE/: .cproject  .project  Makefile  wbs  wbs.cc  webpage.html
web_storage_service/WEB STORAGE SERVICE/Debug/: makefile  subdir.mk
